--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <html>
 <head>
-  	<title>Шрифт</title>
+  	<title>CSS</title>
   	<style type="text/css"> 
- 	my { 
-    		font-family: Arial, calibri;
-		font-size: 200%;
-   	}
+ 	    my { 
+    	    font-family: Arial, calibri;
+		    font-size: 200%;
+    	}
+        table {
+            width: 300px; /* РЁРёСЂРёРЅР° С‚Р°Р±Р»РёС†С‹ */
+            border: 1px solid white; /* Р Р°РјРєР° РІРѕРєСЂСѓРі С‚Р°Р±Р»РёС†С‹ */
+            margin: 40%; /* Р’С‹СЂР°РІРЅРёРІР°РµРј С‚Р°Р±Р»РёС†Сѓ РїРѕ С†РµРЅС‚СЂСѓ РѕРєРЅР°  */
+            font-size: 27px;
+            color: violet;
+            font-size: 27px;
+            float: left;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+        }
+        td {
+            border-bottom: 1px solid grey;
+        }
   	</style>
 </head>
 
 <body style = "background-color:#2F4F4F;">
-	<div align = "left"; style= "width:5%; heigth:100%; background-color:#affdcf; float:left; position:fixed"> 
+	<div align = "left"; style= "width:60px; heigth:100%; background-color:#affdcf; float:left; position:fixed"> 
 	<br/>
 	<img src="28.png" width="60" height="60"><br/><br/><br/>
 	<img src="10.png" width="60" height="60"><br/><br/><br/>
@@ -23,16 +36,43 @@
 	<img src="32.png" width="60" height="60"><br/><br/><br/>
 	</div>
 
-	<div align="justify"; style= "width:90%; float:left; color:white; margin:7%;">
-   	<my>Осень – это самое загадочное время года. Она подкрадывается тихо и незаметно. Осеннее дуновение ветра и лёгкая прохлада окутывает землю ещё с конца августа. А с первым сентябрьским днём всё становится по-настоящему таинственным. Это время года, словно художник, раскрашивает природу в яркие цвета. Но есть у него и другая, менее красочная сторона, когда начинается сезон дождей. Многие считают это временем грусти и размышлений. Но этим период и прекрасен, ведь он даёт нам возможность насладиться жизнью и в то же время погружает в самих себя.</my>
+	<div align="justify"; style= "width:90%; float:left; color:white; margin:70px;">
+   	<my>РћСЃРµРЅСЊ вЂ“ СЌС‚Рѕ СЃР°РјРѕРµ Р·Р°РіР°РґРѕС‡РЅРѕРµ РІСЂРµРјСЏ РіРѕРґР°. РћРЅР° РїРѕРґРєСЂР°РґС‹РІР°РµС‚СЃСЏ С‚РёС…Рѕ Рё РЅРµР·Р°РјРµС‚РЅРѕ. РћСЃРµРЅРЅРµРµ РґСѓРЅРѕРІРµРЅРёРµ РІРµС‚СЂР° Рё Р»С‘РіРєР°СЏ РїСЂРѕС…Р»Р°РґР° РѕРєСѓС‚С‹РІР°РµС‚ Р·РµРјР»СЋ РµС‰С‘ СЃ РєРѕРЅС†Р° Р°РІРіСѓСЃС‚Р°. Рђ СЃ РїРµСЂРІС‹Рј СЃРµРЅС‚СЏР±СЂСЊСЃРєРёРј РґРЅС‘Рј РІСЃС‘ СЃС‚Р°РЅРѕРІРёС‚СЃСЏ РїРѕ-РЅР°СЃС‚РѕСЏС‰РµРјСѓ С‚Р°РёРЅСЃС‚РІРµРЅРЅС‹Рј. Р­С‚Рѕ РІСЂРµРјСЏ РіРѕРґР°, СЃР»РѕРІРЅРѕ С…СѓРґРѕР¶РЅРёРє, СЂР°СЃРєСЂР°С€РёРІР°РµС‚ РїСЂРёСЂРѕРґСѓ РІ СЏСЂРєРёРµ С†РІРµС‚Р°. РќРѕ РµСЃС‚СЊ Сѓ РЅРµРіРѕ Рё РґСЂСѓРіР°СЏ, РјРµРЅРµРµ РєСЂР°СЃРѕС‡РЅР°СЏ СЃС‚РѕСЂРѕРЅР°, РєРѕРіРґР° РЅР°С‡РёРЅР°РµС‚СЃСЏ СЃРµР·РѕРЅ РґРѕР¶РґРµР№. РњРЅРѕРіРёРµ СЃС‡РёС‚Р°СЋС‚ СЌС‚Рѕ РІСЂРµРјРµРЅРµРј РіСЂСѓСЃС‚Рё Рё СЂР°Р·РјС‹С€Р»РµРЅРёР№. РќРѕ СЌС‚РёРј РїРµСЂРёРѕРґ Рё РїСЂРµРєСЂР°СЃРµРЅ, РІРµРґСЊ РѕРЅ РґР°С‘С‚ РЅР°Рј РІРѕР·РјРѕР¶РЅРѕСЃС‚СЊ РЅР°СЃР»Р°РґРёС‚СЊСЃСЏ Р¶РёР·РЅСЊСЋ Рё РІ С‚Рѕ Р¶Рµ РІСЂРµРјСЏ РїРѕРіСЂСѓР¶Р°РµС‚ РІ СЃР°РјРёС… СЃРµР±СЏ.</my>
   	</div>
 
-	<div style =" position: absolute; top: 15; left: 600;">
+	<div style =" position: absolute; top:15px; left:600px;">
 	<img src="kl.png" width="70" height="70">
 	</div>
 
-	<div align="center" style= "width:90%; float:left; color:white; margin:7%;">
-	<my>Листопад, листопад,<br/>Все звено примчалось в сад,<br/>Прибежала Шурочка.<br/>Листья (слышите?) шуршат:<br/>Шурочка, Шурочка…<br/>Ливень листьев кружевной<br/>Шелестит о ней одной:<br/>Шурочка, Шурочка…<br/>Три листочка подмела,<br/>Подошла к учителю:<br/>— Хорошо идут дела!<br/>(Я тружусь, учтите, мол,<br/>Похвалите Шурочку,<br/>Шурочку, Шурочку…)<br/>Как работает звено,<br/>Это Шуре все равно,<br/>Только бы отметили,<br/>В классе ли, в газете ли,<br/>Шурочку, Шурочку…<br/>Листопад, листопад,<br/>Утопает в листьях сад,<br/>Листья грустно шелестят:<br/>Шурочка, Шурочка…</my>
+	<div align="center" style= "width:90%; float:left; color:white; margin:70;">
+	<my>Р›РёСЃС‚РѕРїР°Рґ, Р»РёСЃС‚РѕРїР°Рґ,<br/>Р’СЃРµ Р·РІРµРЅРѕ РїСЂРёРјС‡Р°Р»РѕСЃСЊ РІ СЃР°Рґ,<br/>РџСЂРёР±РµР¶Р°Р»Р° РЁСѓСЂРѕС‡РєР°.<br/>Р›РёСЃС‚СЊСЏ (СЃР»С‹С€РёС‚Рµ?) С€СѓСЂС€Р°С‚:<br/>РЁСѓСЂРѕС‡РєР°, РЁСѓСЂРѕС‡РєР°вЂ¦<br/>Р›РёРІРµРЅСЊ Р»РёСЃС‚СЊРµРІ РєСЂСѓР¶РµРІРЅРѕР№<br/>РЁРµР»РµСЃС‚РёС‚ Рѕ РЅРµР№ РѕРґРЅРѕР№:<br/>РЁСѓСЂРѕС‡РєР°, РЁСѓСЂРѕС‡РєР°вЂ¦<br/>РўСЂРё Р»РёСЃС‚РѕС‡РєР° РїРѕРґРјРµР»Р°,<br/>РџРѕРґРѕС€Р»Р° Рє СѓС‡РёС‚РµР»СЋ:<br/>вЂ” РҐРѕСЂРѕС€Рѕ РёРґСѓС‚ РґРµР»Р°!<br/>(РЇ С‚СЂСѓР¶СѓСЃСЊ, СѓС‡С‚РёС‚Рµ, РјРѕР»,<br/>РџРѕС…РІР°Р»РёС‚Рµ РЁСѓСЂРѕС‡РєСѓ,<br/>РЁСѓСЂРѕС‡РєСѓ, РЁСѓСЂРѕС‡РєСѓвЂ¦)<br/>РљР°Рє СЂР°Р±РѕС‚Р°РµС‚ Р·РІРµРЅРѕ,<br/>Р­С‚Рѕ РЁСѓСЂРµ РІСЃРµ СЂР°РІРЅРѕ,<br/>РўРѕР»СЊРєРѕ Р±С‹ РѕС‚РјРµС‚РёР»Рё,<br/>Р’ РєР»Р°СЃСЃРµ Р»Рё, РІ РіР°Р·РµС‚Рµ Р»Рё,<br/>РЁСѓСЂРѕС‡РєСѓ, РЁСѓСЂРѕС‡РєСѓвЂ¦<br/>Р›РёСЃС‚РѕРїР°Рґ, Р»РёСЃС‚РѕРїР°Рґ,<br/>РЈС‚РѕРїР°РµС‚ РІ Р»РёСЃС‚СЊСЏС… СЃР°Рґ,<br/>Р›РёСЃС‚СЊСЏ РіСЂСѓСЃС‚РЅРѕ С€РµР»РµСЃС‚СЏС‚:<br/>РЁСѓСЂРѕС‡РєР°, РЁСѓСЂРѕС‡РєР°вЂ¦</my>
 	</div>
+
+    <table>
+        <tr>
+            <td>Р—РёРјР°</td>
+            <td>31</td>
+            <td>31</td>
+            <td>28*</td>
+        </tr>
+        <tr>
+            <td>Р’РµСЃРЅР°</td>
+            <td>31</td>
+            <td>30</td>
+            <td>31</td>
+        </tr>
+        <tr>
+            <td>Р›РµС‚Рѕ</td>
+            <td>30</td>
+            <td>31</td>
+            <td>31</td>
+        </tr>
+        <tr>
+            <td>РћСЃРµРЅСЊ</td>
+            <td>30</td>
+            <td>31</td>
+            <td>30</td>
+        </tr>
+    </table>
 </body> 
 </html>
