--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
             <td>30</td>
         </tr>
     </table>
+	<marquee behavior="alternate" scrollamount="30" direction="right"> <img src="am.jpg" /> </marquee>
 </body> 
 </html>
