--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 
 <body style = "background-color:#2F4F4F;">
+	<!-- ИГОЛЬНИЦИН ЕВГЕНИЙ --> <!-- Web 21.12.2019 -->
 	<div align = "left"; style= "width:60px; heigth:100%; background-color:#affdcf; float:left; position:fixed"> 
 	<br/>
 	<img src="28.png" width="60" height="60"><br/><br/><br/>
@@ -35,7 +36,7 @@
 	<img src="5.png" width="60" height="60"><br/><br/><br/>
 	<img src="32.png" width="60" height="60"><br/><br/><br/>
 	</div>
-
+	<!-- Web 21.12.2019 -->
 	<div align="justify"; style= "width:90%; float:left; color:white; margin:70px;">
    	<my>Осень – это самое загадочное время года. Она подкрадывается тихо и незаметно. Осеннее дуновение ветра и лёгкая прохлада окутывает землю ещё с конца августа. А с первым сентябрьским днём всё становится по-настоящему таинственным. Это время года, словно художник, раскрашивает природу в яркие цвета. Но есть у него и другая, менее красочная сторона, когда начинается сезон дождей. Многие считают это временем грусти и размышлений. Но этим период и прекрасен, ведь он даёт нам возможность насладиться жизнью и в то же время погружает в самих себя.</my>
   	</div>
@@ -74,6 +75,6 @@
             <td>30</td>
         </tr>
     </table>
-	<marquee behavior="alternate" scrollamount="30" direction="right"> <img src="img/am.jpg" /> </marquee>
+	<marquee behavior="alternate" scrollamount="80" direction="right"> <img src="img/am.jpg" /> </marquee>
 </body> 
 </html>
