--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
             <td>30</td>
         </tr>
     </table>
-	<marquee behavior="alternate" scrollamount="80" direction="right"> <img src="img/am.jpg" /> </marquee>
+	<marquee  crollamount="10" direction="right"> <img src="img/am.jpg" /> </marquee>
 </body> 
 </html>
