--- a/index.html
+++ b/index.html
@@ -1,80 +1,42 @@
 <html>
-<head>
-  	<title>CSS</title>
-  	<style type="text/css"> 
- 	    my { 
-    	    font-family: Arial, calibri;
-		    font-size: 200%;
-    	}
-        table {
-            width: 300px; /* Ширина таблицы */
-            border: 1px solid white; /* Рамка вокруг таблицы */
-            margin: 40%; /* Выравниваем таблицу по центру окна  */
-            font-size: 27px;
-            color: violet;
-            font-size: 27px;
-            float: left;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
-        }
-        td {
-            border-bottom: 1px solid grey;
-        }
-  	</style>
-</head>
-
-<body style = "background-color:#2F4F4F;">
-	<!-- ИГОЛЬНИЦИН ЕВГЕНИЙ --> <!-- Web 21.12.2019 -->
-	<div align = "left"; style= "width:60px; heigth:100%; background-color:#affdcf; float:left; position:fixed"> 
-	<br/>
-	<img src="28.png" width="60" height="60"><br/><br/><br/>
-	<img src="10.png" width="60" height="60"><br/><br/><br/>
-	<img src="15.png" width="60" height="60"><br/><br/><br/>
-	<img src="17.png" width="60" height="60"><br/><br/><br/>
-	<img src="33.png" width="60" height="60"><br/><br/><br/>
-	<img src="18.png" width="60" height="60"><br/><br/><br/>
-	<img src="4.png" width="60" height="60"><br/><br/><br/>
-	<img src="5.png" width="60" height="60"><br/><br/><br/>
-	<img src="32.png" width="60" height="60"><br/><br/><br/>
+	<head>
+	<link rel="shortcut icon" href="ff.gif">
+	<title>ABZ</title>
+	</head>
+	
+	<body >
+	<font face="Arial, Calibri">
+	
+	<div align="left"><blockquote><blockquote><font color="#E6E6FA">
+		<big><big><big><big><big><big><big>
+		<ol>
+		<li>Теория:
+			<ul>
+    			<li><a href="ИгольницинИстория.doc"; target="_blank"; title="Начнется скачивание документа";>История</a></li>
+			</ul>
+			
+		</li>
+		<li>Практика:
+			<ul>
+    			<li><a href="ИгольницинШрифты21.html"  target="_blank">Титульник</a></li>
+     			<li><a href="ИгольницинАбзац22.html" target="_blank">Абзацы + цвет</a></li></li>
+			<li><a href="ИгольницинСписки23.html" target="_blank">Списки</a></li>
+			<li><a href="ИгольницинЦвет.html" target="_blank">Графика</a></li>
+			</ul>
+		</li>
+		<li>Источники:
+			<ul>
+    			<li><a href="http://ru.html.net/tutorials/html/" target="_blank">Учебник 1</a></li>
+     			<li><a href="Учебник2/HTML!%20Учебник%20по%20HTML%20для%20веб-мастера%20и%20веб-дизайнера%20-%20введение.htm" target="_blank">Учебник 2</a></li>
+    			<li><a href="Учебник3/css-lessons/css-lesson-1.html" target="_blank">Учебник 3</a></li>
+     			<li><a href="HTML 4.0. Новый уровень создания HTML-документов.pdf" target="_blank">Учебник 4</a></li>
+    			<li><a href="https://medium.com/@kopilov.vlad/%D0%BE%D0%B1%D0%B7%D0%BE%D1%80-%D0%BA%D0%BD%D0%B8%D0%B3-%D1%81-%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D1%8B%D1%85-%D1%8F-%D0%BD%D0%B0%D1%87%D0%B0%D0%BB-%D0%B2%D0%B5%D0%B1-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5-1c4c2090a02e" target="_blank">учебник 5</a></li>
+			</ul>
+		</li>
+		</ol>
+		</big></big></big></big></big></big></big>
+	</font></blockquote></blockquote>
 	</div>
-	<!-- Web 21.12.2019 -->
-	<div align="justify"; style= "width:90%; float:left; color:white; margin:70px;">
-   	<my>Осень – это самое загадочное время года. Она подкрадывается тихо и незаметно. Осеннее дуновение ветра и лёгкая прохлада окутывает землю ещё с конца августа. А с первым сентябрьским днём всё становится по-настоящему таинственным. Это время года, словно художник, раскрашивает природу в яркие цвета. Но есть у него и другая, менее красочная сторона, когда начинается сезон дождей. Многие считают это временем грусти и размышлений. Но этим период и прекрасен, ведь он даёт нам возможность насладиться жизнью и в то же время погружает в самих себя.</my>
-  	</div>
-
-	<div style =" position: absolute; top:15px; left:600px;">
-	<img src="kl.png" width="70" height="70">
-	</div>
-
-	<div align="center" style= "width:90%; float:left; color:white; margin:70;">
-	<my>Листопад, листопад,<br/>Все звено примчалось в сад,<br/>Прибежала Шурочка.<br/>Листья (слышите?) шуршат:<br/>Шурочка, Шурочка…<br/>Ливень листьев кружевной<br/>Шелестит о ней одной:<br/>Шурочка, Шурочка…<br/>Три листочка подмела,<br/>Подошла к учителю:<br/>— Хорошо идут дела!<br/>(Я тружусь, учтите, мол,<br/>Похвалите Шурочку,<br/>Шурочку, Шурочку…)<br/>Как работает звено,<br/>Это Шуре все равно,<br/>Только бы отметили,<br/>В классе ли, в газете ли,<br/>Шурочку, Шурочку…<br/>Листопад, листопад,<br/>Утопает в листьях сад,<br/>Листья грустно шелестят:<br/>Шурочка, Шурочка…</my>
-	</div>
-
-    <table>
-        <tr>
-            <td>Зима</td>
-            <td>31</td>
-            <td>31</td>
-            <td>28*</td>
-        </tr>
-        <tr>
-            <td>Весна</td>
-            <td>31</td>
-            <td>30</td>
-            <td>31</td>
-        </tr>
-        <tr>
-            <td>Лето</td>
-            <td>30</td>
-            <td>31</td>
-            <td>31</td>
-        </tr>
-        <tr>
-            <td>Осень</td>
-            <td>30</td>
-            <td>31</td>
-            <td>30</td>
-        </tr>
-    </table>
-	<marquee behavior="slide" crollamount="3" direction="right"> <img src="img/am.jpg" /> </marquee>
-</body> 
+	</font>
+	</body>
 </html>
