--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<ul>
     			<li><a href="ИгольницинШрифты21.html"  target="_blank">Титульник</a></li>
      			<li><a href="ИгольницинАбзац22.html" target="_blank">Абзацы + цвет</a></li></li>
-			<li><a href="ИгольницинСписки23.html" target="_blank">Списки</a></li>
+			<li><a href="2ИгольницинСписки23.html" target="_blank">Списки</a></li>
 			<li><a href="ИгольницинЦвет.html" target="_blank">Графика</a></li>
 			</ul>
 		</li>
