--- a/index.html
+++ b/index.html
@@ -1,42 +1,135 @@
 <html>
-	<head>
-	<link rel="shortcut icon" href="ff.gif">
-	<title>ABZ</title>
-	</head>
-	
-	<body >
-	<font face="Arial, Calibri">
-	
-	<div align="left"><blockquote><blockquote><font color="#E6E6FA">
-		<big><big><big><big><big><big><big>
-		<ol>
-		<li>Теория:
-			<ul>
-    			<li><a href="ИгольницинИстория.doc"; target="_blank"; title="Начнется скачивание документа";>История</a></li>
-			</ul>
-			
-		</li>
-		<li>Практика:
-			<ul>
-    			<li><a href="ИгольницинШрифты21.html"  target="_blank">Титульник</a></li>
-     			<li><a href="ИгольницинАбзац22.html" target="_blank">Абзацы + цвет</a></li></li>
-			<li><a href="2ИгольницинСписки23.html" target="_blank">Списки</a></li>
-			<li><a href="ИгольницинЦвет.html" target="_blank">Графика</a></li>
-			</ul>
-		</li>
-		<li>Источники:
-			<ul>
-    			<li><a href="http://ru.html.net/tutorials/html/" target="_blank">Учебник 1</a></li>
-     			<li><a href="Учебник2/HTML!%20Учебник%20по%20HTML%20для%20веб-мастера%20и%20веб-дизайнера%20-%20введение.htm" target="_blank">Учебник 2</a></li>
-    			<li><a href="Учебник3/css-lessons/css-lesson-1.html" target="_blank">Учебник 3</a></li>
-     			<li><a href="HTML 4.0. Новый уровень создания HTML-документов.pdf" target="_blank">Учебник 4</a></li>
-    			<li><a href="https://medium.com/@kopilov.vlad/%D0%BE%D0%B1%D0%B7%D0%BE%D1%80-%D0%BA%D0%BD%D0%B8%D0%B3-%D1%81-%D0%BA%D0%BE%D1%82%D0%BE%D1%80%D1%8B%D1%85-%D1%8F-%D0%BD%D0%B0%D1%87%D0%B0%D0%BB-%D0%B2%D0%B5%D0%B1-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5-1c4c2090a02e" target="_blank">учебник 5</a></li>
-			</ul>
-		</li>
-		</ol>
-		</big></big></big></big></big></big></big>
-	</font></blockquote></blockquote>
-	</div>
-	</font>
-	</body>
+<head>
+    <link rel="shortcut icon" href="img/son.png">
+    <title>KURS</title>
+    <style type="text/css">
+        table {
+            /*border-collapse: collapse;*/
+            border: 1px solid grey;
+            vertical-align: top;
+        }
+        td {
+            vertical-align: top;
+        }
+        th {
+            align-content: center;
+        }
+        img.anim:hover {
+            filter: alpha (Opacity=25); /* прозрачность для IE */
+            opacity: 0.25; /* прозрачность для других браузеров */
+            transition: all 1s ease-in-out;
+
+        }
+        * {
+            font-family:'Arial','Calibri';
+        }
+        .base {
+            margin: 80px;
+            padding-top: 0px;
+            width: 90%;
+            min-width: 1020px;
+        }
+        .high {
+            font-size: 100px;
+            text-align: center;
+        }
+        .preHigh {
+            font-size: 50px;
+            text-align: left;
+        }
+        .normal {
+            font-size: 30px;
+            text-align: left;
+        }
+    </style>
+</head>
+
+<body style="background-color:#2F4F4F;">
+    <div align="left" ; style="width:60px; heigth:100%; background-color:#affdcf; float:left; position:fixed; top: 10px; left: 10px;">
+        <br />
+        <img src="img/28.png" width="60" height="60"><br /><br /><br />
+        <img src="img/10.png" width="60" height="60"><br /><br /><br />
+        <img src="img/15.png" width="60" height="60"><br /><br /><br />
+        <img src="img/17.png" width="60" height="60"><br /><br /><br />
+        <img src="img/33.png" width="60" height="60"><br /><br /><br />
+        <img src="img/18.png" width="60" height="60"><br /><br /><br />
+        <img src="img/4.png" width="60" height="60"><br /><br /><br />
+        <img src="img/5.png" width="60" height="60"><br /><br /><br />
+        <img src="img/32.png" width="60" height="60"><br /><br /><br />
+    </div>
+    
+    <div class="base" style="background:#fff" ;>
+        <p class="high" style="padding-left:40px; padding-right: 40px;">Невербальные средства усиления коммуникативной позиции говорящего</p>
+
+        <!--______________________________1 часть______________________________-->
+        <p class="preHigh">Фактор внешности:</p>
+        <table align="center" ;>
+            <th><p class="normal">Одежда</p></th>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/classic.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Классический Стиль</a></br>Подходит большинству людей и уместен в большинстве ситуаций. Он максимально универсален.</p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/extr.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Романтический Стиль</a></br>Подходит стройной, выдержанной, спокойной и мягкой по характеру девушке или женщине, которая отличается негромким голосом, не резка в движениях, не очень активна и тем более не агрессивна в жизни. </p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/rom.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Экстравагантный Стиль</a></br>Предполагает индивидуализм и независимость, смелость, наступательность, а иногда и агрессивность в поведении. Экстравагантность в большей мере свойственна обычно молодежи</p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/sport.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Спортивный Стиль</a></br>Предполагает оптимистичность, раско¬ванность, желание не ограничивать себя нормами, рамками и стандартами, стремление к свободе и независимости, но в то же самое время стремление особо не выделяться.</p></td>
+            </tr>
+        </table>
+
+        <!--______________________________2 часть______________________________-->
+        <p class="preHigh">Фактор внешности:</p>
+        <table align="center" ;>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/head.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Классический Стиль</a></br>Подходит большинству людей и уместен в большинстве ситуаций. Он максимально универсален.</p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/body.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Романтический Стиль</a></br>Подходит стройной, выдержанной, спокойной и мягкой по характеру девушке или женщине, которая отличается негромким голосом, не резка в движениях, не очень активна и тем более не агрессивна в жизни. </p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/buti.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Экстравагантный Стиль</a></br>Предполагает индивидуализм и независимость, смелость, наступательность, а иногда и агрессивность в поведении. Экстравагантность в большей мере свойственна обычно молодежи</p></td>
+            </tr>
+        </table>
+
+        <!--______________________________3 часть______________________________-->
+        <p class="preHigh">Фактор внешности:</p>
+        <table align="center" ;>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/eye.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Классический Стиль</a></br>Подходит большинству людей и уместен в большинстве ситуаций. Он максимально универсален.</p></td>
+            </tr>
+        </table>
+
+        <!--______________________________2 часть______________________________-->
+        <p class="preHigh">Фактор внешности:</p>
+        <table align="center" ;>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/imm.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Классический Стиль</a></br>Подходит большинству людей и уместен в большинстве ситуаций. Он максимально универсален.</p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/mym.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Романтический Стиль</a></br>Подходит стройной, выдержанной, спокойной и мягкой по характеру девушке или женщине, которая отличается негромким голосом, не резка в движениях, не очень активна и тем более не агрессивна в жизни. </p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/zhest.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Экстравагантный Стиль</a></br>Предполагает индивидуализм и независимость, смелость, наступательность, а иногда и агрессивность в поведении. Экстравагантность в большей мере свойственна обычно молодежи</p></td>
+            </tr>
+            <tr>
+                <td width="400px"><img class="anim" ; src="img/pose.jpg" width="400px" height="266px"><br /><br /><br /></td>
+                <td width="600px"><p class="normal"><a>Экстравагантный Стиль</a></br>Предполагает индивидуализм и независимость, смелость, наступательность, а иногда и агрессивность в поведении. Экстравагантность в большей мере свойственна обычно молодежи</p></td>
+            </tr>
+        </table>
+
+    </div>
+</body>
 </html>
