--- a/information.html
+++ b/information.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <link rel="shortcut icon" href="img/son.png">
@@ -6,14 +7,14 @@
     <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
     <script>
     $(document).ready(function(){
-        //Скрыть PopUp при загрузке страницы
+        //Г‘ГЄГ°Г»ГІГј PopUp ГЇГ°ГЁ Г§Г ГЈГ°ГіГ§ГЄГҐ Г±ГІГ°Г Г­ГЁГ¶Г»
         PopUpHide();
     });
-    //Функция отображения PopUp
+    //Г”ГіГ­ГЄГ¶ГЁГї Г®ГІГ®ГЎГ°Г Г¦ГҐГ­ГЁГї PopUp
     function PopUpShow(){
         $("#popup1").show();
     }
-    //Функция скрытия PopUp
+    //Г”ГіГ­ГЄГ¶ГЁГї Г±ГЄГ°Г»ГІГЁГї PopUp
     function PopUpHide(){
         $("#popup1").hide();
     }
@@ -27,11 +28,11 @@
     <!--background: rgb(0, 0, 0, 0.7);-->
     <input type="checkbox" id="toggle-1">
     <div class="base" ; style="margin-top: 0px; margin-bottom: 0px;">
-        <p class="high" style="padding-left:40px; padding-right: 40px;">Информация</p>
+        <p class="high" style="padding-left:40px; padding-right: 40px;">Г€Г­ГґГ®Г°Г¬Г Г¶ГЁГї</p>
 
         <p class="normal" ; style="text-align:justify; padding-left:40px; padding-right: 40px;">
-            &emsp;Основанием для разработки сайта является задание на курсовую работу по дисциплине "Web-программирование", выданное на кафедре МПО ЭВМ ИИТ ЧГУ.
-            Этот web–сайт поможет найти пользователям основную информацию об невербальных средсвах усиления коммуникативной позиции говорящего. Так же пользователь может скачать документ Microsoft Word со всей информацией, которую он может найти здесь.
+            &emsp;ГЋГ±Г­Г®ГўГ Г­ГЁГҐГ¬ Г¤Г«Гї Г°Г Г§Г°Г ГЎГ®ГІГЄГЁ Г±Г Г©ГІГ  ГїГўГ«ГїГҐГІГ±Гї Г§Г Г¤Г Г­ГЁГҐ Г­Г  ГЄГіГ°Г±Г®ГўГіГѕ Г°Г ГЎГ®ГІГі ГЇГ® Г¤ГЁГ±Г¶ГЁГЇГ«ГЁГ­ГҐ "Web-ГЇГ°Г®ГЈГ°Г Г¬Г¬ГЁГ°Г®ГўГ Г­ГЁГҐ", ГўГ»Г¤Г Г­Г­Г®ГҐ Г­Г  ГЄГ ГґГҐГ¤Г°ГҐ ГЊГЏГЋ ГќГ‚ГЊ Г€Г€Г’ Г—ГѓГ“.
+            ГќГІГ®ГІ webвЂ“Г±Г Г©ГІ ГЇГ®Г¬Г®Г¦ГҐГІ Г­Г Г©ГІГЁ ГЇГ®Г«ГјГ§Г®ГўГ ГІГҐГ«ГїГ¬ Г®Г±Г­Г®ГўГ­ГіГѕ ГЁГ­ГґГ®Г°Г¬Г Г¶ГЁГѕ Г®ГЎ Г­ГҐГўГҐГ°ГЎГ Г«ГјГ­Г»Гµ Г±Г°ГҐГ¤Г±ГўГ Гµ ГіГ±ГЁГ«ГҐГ­ГЁГї ГЄГ®Г¬Г¬ГіГ­ГЁГЄГ ГІГЁГўГ­Г®Г© ГЇГ®Г§ГЁГ¶ГЁГЁ ГЈГ®ГўГ®Г°ГїГ№ГҐГЈГ®. Г’Г ГЄ Г¦ГҐ ГЇГ®Г«ГјГ§Г®ГўГ ГІГҐГ«Гј Г¬Г®Г¦ГҐГІ Г±ГЄГ Г·Г ГІГј Г¤Г®ГЄГіГ¬ГҐГ­ГІ Microsoft Word Г±Г® ГўГ±ГҐГ© ГЁГ­ГґГ®Г°Г¬Г Г¶ГЁГҐГ©, ГЄГ®ГІГ®Г°ГіГѕ Г®Г­ Г¬Г®Г¦ГҐГІ Г­Г Г©ГІГЁ Г§Г¤ГҐГ±Гј.
 
         </p>
 
@@ -54,16 +55,16 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор внешности
+                                Г”Г ГЄГІГ®Г° ГўГ­ГҐГёГ­Г®Г±ГІГЁ
                                 <ul type="square">
-                                    <li><a href="#klst">Классический стиль</a></li>
-                                    <li><a href="#rost">Романтический стиль</a></li>
-                                    <li><a href="#ekst">Экстровагантный стиль</a></li>
-                                    <li><a href="#spst">Спортивный стиль</a></li>
-                                    <li><a href="#dest">Деловой стиль</a></li>
-                                    <li><a href="#pr">Прическа, цвет волос</a></li>
-                                    <li><a href="#sl">Сложение</a></li>
-                                    <li><a href="#fzpr">Физическая привлекательность</a></li>
+                                    <li><a href="#klst">ГЉГ«Г Г±Г±ГЁГ·ГҐГ±ГЄГЁГ© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#rost">ГђГ®Г¬Г Г­ГІГЁГ·ГҐГ±ГЄГЁГ© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#ekst">ГќГЄГ±ГІГ°Г®ГўГ ГЈГ Г­ГІГ­Г»Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#spst">Г‘ГЇГ®Г°ГІГЁГўГ­Г»Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#dest">Г„ГҐГ«Г®ГўГ®Г© Г±ГІГЁГ«Гј</a></li>
+                                    <li><a href="#pr">ГЏГ°ГЁГ·ГҐГ±ГЄГ , Г¶ГўГҐГІ ГўГ®Г«Г®Г±</a></li>
+                                    <li><a href="#sl">Г‘Г«Г®Г¦ГҐГ­ГЁГҐ</a></li>
+                                    <li><a href="#fzpr">Г”ГЁГ§ГЁГ·ГҐГ±ГЄГ Гї ГЇГ°ГЁГўГ«ГҐГЄГ ГІГҐГ«ГјГ­Г®Г±ГІГј</a></li>
                                 </ul>
 
                             </li>
@@ -72,9 +73,9 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор взгляда
+                                Г”Г ГЄГІГ®Г° ГўГ§ГЈГ«ГїГ¤Г 
                                 <ul type="square">
-                                    <li><a href="#vz">Взгляд</a></li>
+                                    <li><a href="#vz">Г‚Г§ГЈГ«ГїГ¤</a></li>
                                 </ul>
 
                             </li>
@@ -83,12 +84,12 @@
                     <td width="*" ; height="220">
                         <ul>
                             <li>
-                                Фактор внешности
+                                Г”Г ГЄГІГ®Г° ГўГ­ГҐГёГ­Г®Г±ГІГЁ
                                 <ul type="square">
-                                    <li><a href="#poim">Поведенческий имидж</a></li>
-                                    <li><a href="#mi">Мимика</a></li>
-                                    <li><a href="#zhe">Жесты</a></li>
-                                    <li><a href="#po">Позы</a></li>
+                                    <li><a href="#poim">ГЏГ®ГўГҐГ¤ГҐГ­Г·ГҐГ±ГЄГЁГ© ГЁГ¬ГЁГ¤Г¦</a></li>
+                                    <li><a href="#mi">ГЊГЁГ¬ГЁГЄГ </a></li>
+                                    <li><a href="#zhe">Г†ГҐГ±ГІГ»</a></li>
+                                    <li><a href="#po">ГЏГ®Г§Г»</a></li>
                                 </ul>
 
                             </li>
@@ -107,7 +108,7 @@
                          onmouseout="this.src = 'img/x.png'; this.width = 30; this.height = 30;" />
                 </a>
                 <br /><br />
-                <p class="normal" ; style="background-color: rgba(0,0,0,0.8)">Над сайтом работал:<br />Cтудент группы 1ПИб-01-21оп<br />Игольницин Евгений<br />Тел: 8-921-069-08-58<br />Почта: igoln199@mail.ru</p>
+                <p class="normal" ; style="background-color: rgba(0,0,0,0.8)">ГЌГ Г¤ Г±Г Г©ГІГ®Г¬ Г°Г ГЎГ®ГІГ Г«:<br />CГІГіГ¤ГҐГ­ГІ ГЈГ°ГіГЇГЇГ» 1ГЏГ€ГЎ-01-21Г®ГЇ<br />Г€ГЈГ®Г«ГјГ­ГЁГ¶ГЁГ­ Г…ГўГЈГҐГ­ГЁГ©<br />Г’ГҐГ«: 8-921-069-08-58<br />ГЏГ®Г·ГІГ : igoln199@mail.ru</p>
 
             </div>
         </div>
@@ -120,13 +121,13 @@
                      onmouseout="this.src = 'img/28.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="Information.html" ; title="Информация о сайте" ;>
+            <a href="Information.html" ; title="Г€Г­ГґГ®Г°Г¬Г Г¶ГЁГї Г® Г±Г Г©ГІГҐ" ;>
                 <img src="img/info.png" width="60" height="60"
                      onmouseover="this.src = 'img/info-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/info.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="where.html" ; title="Хотите узнать где нас найти?" ;>
+            <a href="where.html" ; title="Г•Г®ГІГЁГІГҐ ГіГ§Г­Г ГІГј ГЈГ¤ГҐ Г­Г Г± Г­Г Г©ГІГЁ?" ;>
                 <img src="img/where.png" width="60" height="60"
                      onmouseover="this.src = 'img/where-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/where.png'; this.width = 60; this.height = 60;" />
@@ -138,7 +139,7 @@
                      onmouseout="this.src = 'img/33.png'; this.width = 60; this.height = 60;" />
             </a>
             <br /><br />
-            <a href="1ИгольницинИстория.doc" ; title="Cкачать документ со всей информацией для этого сайта?" ;>
+            <a href="1Г€ГЈГ®Г«ГјГ­ГЁГ¶ГЁГ­Г€Г±ГІГ®Г°ГЁГї.doc" ; title="CГЄГ Г·Г ГІГј Г¤Г®ГЄГіГ¬ГҐГ­ГІ Г±Г® ГўГ±ГҐГ© ГЁГ­ГґГ®Г°Г¬Г Г¶ГЁГҐГ© Г¤Г«Гї ГЅГІГ®ГЈГ® Г±Г Г©ГІГ ?" ;>
                 <img src="img/38.png" width="60" height="60"
                      onmouseover="this.src = 'img/38-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/38.png'; this.width = 60; this.height = 60;" />
@@ -146,13 +147,13 @@
             <br /><br />
 
             <label for="toggle-1">
-                <img src="img/sne.png" width="60" height="60" title="Включить или выкоючить снегXD" ;
+                <img src="img/sne.png" width="60" height="60" title="Г‚ГЄГ«ГѕГ·ГЁГІГј ГЁГ«ГЁ ГўГ»ГЄГ®ГѕГ·ГЁГІГј Г±Г­ГҐГЈXD" ;
                      onmouseover="this.src = 'img/sne-1.png'; this.width = 240; this.height = 60;"
                      onmouseout="this.src = 'img/sne.png'; this.width = 60; this.height = 60;" />
             </label>
             <br /><br />
 
-            <a href="#" ; title="Вернуться к началу" style=" position: absolute; top:90%; left:0px;">
+            <a href="#" ; title="Г‚ГҐГ°Г­ГіГІГјГ±Гї ГЄ Г­Г Г·Г Г«Гі" style=" position: absolute; top:90%; left:0px;">
                 <img src="img/up.png" width="60" height="60">
             </a>
 
